# pro-manager

./: ARCHITECTURE.md  GEMINI.md  README.md  pro-manager.md
issues/: UI_ISSUES.md  bug.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  db.rs  error.rs  lib.rs  models.rs  project.rs  state.rs
web/: package-lock.json  package.json  tailwind.config.js  vite.config.ts
web/src/: App.tsx  api.ts  index.css  types.ts
web/src/components/: ActivityChart.tsx  CustomSelect.tsx  LaunchPresetModal.tsx  ProjectCard.tsx  ProjectListItem.tsx  ProjectModal.tsx  Sidebar.tsx  TitleBar.tsx  Topbar.tsx  WorkspaceSelector.tsx
web/src/context/: AppContext.tsx
web/src/layouts/: MainLayout.tsx
web/src/pages/: Dashboards.tsx  Projects.tsx  Settings.tsx
