[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.91.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
thiserror = "1.0"
uuid = { version = "1.11", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.41", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.7", default-features = false, features = ["macros", "runtime-tokio", "sqlite", "uuid", "chrono", "json"] }
tauri = { version = "2.9.2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
